examples/good/eq-variable.bg
(int x 42)
(int y 42)
(= x y)
