examples/bad/types-dont-match-int-var.bg
(var y True)
(int x y) # Runtime exception
